--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     padding: 25px;
     border-radius: 12px;
     box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-item: stretch;
 }
 
 h2 {
